Added Logging